--- a/index.html
+++ b/index.html
@@ -874,6 +874,19 @@ const HINDI_CURRICULUM = [
                     setScale(1); setTranslate({ x: 0, y: 0 });
                 }
             };
+            // --- NEW: KEYBOARD NAVIGATION SUPPORT ---
+            useEffect(() => {
+                const handleKeyDown = (e) => {
+                    if (!imageModalOpen) return;
+                    
+                    if (e.key === 'ArrowRight') nextImage();
+                    if (e.key === 'ArrowLeft') prevImage();
+                    if (e.key === 'Escape') closeImageModal();
+                };
+
+                window.addEventListener('keydown', handleKeyDown);
+                return () => window.removeEventListener('keydown', handleKeyDown);
+            }, [imageModalOpen, activeImageIndex]);
 
             // TOUCH HANDLERS (Swipe & Zoom Logic)
             const handleTouchStart = (e) => {
@@ -1332,18 +1345,64 @@ const HINDI_CURRICULUM = [
 
                 return (
                 <div className="min-h-screen pb-24">
-                    {/* --- FULL SCREEN IMMERSIVE MODAL --- */}
+                                                            {/* --- FULL SCREEN IMMERSIVE MODAL (Updated: Arrows Hide on Tap) --- */}
                     {imageModalOpen && (
-                        <div className="fixed inset-0 z-50 bg-black flex items-center justify-center animate-slide-in">
+                        <div className="fixed inset-0 z-50 bg-white dark:bg-black flex items-center justify-center animate-slide-in transition-colors duration-300">
+                            
+                            {/* 1. Top Controls: Counter & Close Button (Toggles with Tap) */}
                             <div className={`absolute top-0 left-0 right-0 p-4 flex justify-between items-center z-50 transition-opacity duration-300 ${showControls ? 'opacity-100' : 'opacity-0 pointer-events-none'}`}>
-                                <div className="text-white/90 text-sm font-bold bg-black/40 px-3 py-1 rounded-full backdrop-blur-md border border-white/10">
+                                <div className="text-xs font-bold px-3 py-1.5 rounded-full backdrop-blur-md border shadow-sm bg-gray-200/80 text-gray-900 border-gray-300 dark:bg-black/60 dark:text-white dark:border-white/20">
                                     {activeImageIndex + 1} / {selectedLesson.imageCount}
                                 </div>
-                                <button onClick={closeImageModal} className="p-3 bg-black/40 text-white rounded-full backdrop-blur-md border border-white/10"><i className="ph ph-x text-xl"></i></button>
+                                <button onClick={closeImageModal} className="p-2.5 rounded-full backdrop-blur-md border shadow-sm transition-transform active:scale-95 bg-gray-200/80 text-gray-900 border-gray-300 hover:bg-gray-300 dark:bg-black/60 dark:text-white dark:border-white/20 dark:hover:bg-black/80">
+                                    <i className="ph ph-x text-lg"></i>
+                                </button>
                             </div>
-                            <div className="w-full h-full touch-none flex items-center justify-center overflow-hidden" onTouchStart={handleTouchStart} onTouchMove={handleTouchMove} onTouchEnd={handleTouchEnd} onClick={toggleControls}>
-                                <img src={`./images/class_${String(selectedLesson.id).padStart(2, '0')}_${activeImageIndex + 1}.webp`} style={{ transform: `translate(${translate.x}px, ${translate.y}px) scale(${scale})`, transition: isDragging ? 'none' : 'transform 0.3s ease-out', maxHeight: '100%', maxWidth: '100%', objectFit: 'contain' }} alt="Full Screen View" className="select-none" />
+
+                            {/* 2. Left Navigation Button (Toggles with Tap) */}
+                            <button 
+                                onClick={(e) => { e.stopPropagation(); prevImage(); }}
+                                className={`absolute left-2 z-50 p-3 rounded-full backdrop-blur-md border shadow-md transition-all duration-300 active:scale-90 hover:bg-gray-100 dark:hover:bg-slate-800 bg-white/70 text-black border-gray-200 dark:bg-black/50 dark:text-white dark:border-white/20 
+                                ${showControls ? 'opacity-100 translate-x-0' : 'opacity-0 -translate-x-10 pointer-events-none'}`} 
+                                disabled={activeImageIndex === 0}
+                                style={{ display: activeImageIndex === 0 ? 'none' : 'block' }} 
+                            >
+                                <i className="ph ph-caret-left text-2xl"></i>
+                            </button>
+
+                            {/* 3. Main Image Container (Tap here triggers toggle) */}
+                            <div 
+                                className="w-full h-full touch-none flex items-center justify-center overflow-hidden" 
+                                onTouchStart={handleTouchStart} 
+                                onTouchMove={handleTouchMove} 
+                                onTouchEnd={handleTouchEnd} 
+                                onClick={toggleControls}
+                            >
+                                <img 
+                                    src={`./images/class_${String(selectedLesson.id).padStart(2, '0')}_${activeImageIndex + 1}.webp`} 
+                                    style={{ 
+                                        transform: `translate(${translate.x}px, ${translate.y}px) scale(${scale})`, 
+                                        transition: isDragging ? 'none' : 'transform 0.3s ease-out', 
+                                        maxHeight: '100%', 
+                                        maxWidth: '100%', 
+                                        objectFit: 'contain' 
+                                    }} 
+                                    alt="Full Screen View" 
+                                    className="select-none drop-shadow-2xl" 
+                                />
                             </div>
+
+                            {/* 4. Right Navigation Button (Toggles with Tap) */}
+                            <button 
+                                onClick={(e) => { e.stopPropagation(); nextImage(); }}
+                                className={`absolute right-2 z-50 p-3 rounded-full backdrop-blur-md border shadow-md transition-all duration-300 active:scale-90 hover:bg-gray-100 dark:hover:bg-slate-800 bg-white/70 text-black border-gray-200 dark:bg-black/50 dark:text-white dark:border-white/20 
+                                ${showControls ? 'opacity-100 translate-x-0' : 'opacity-0 translate-x-10 pointer-events-none'}`}
+                                disabled={activeImageIndex === selectedLesson.imageCount - 1}
+                                style={{ display: activeImageIndex === selectedLesson.imageCount - 1 ? 'none' : 'block' }}
+                            >
+                                <i className="ph ph-caret-right text-2xl"></i>
+                            </button>
+
                         </div>
                     )}
 
